[project]
name = "starbetanodes"
description = "Welcome to Star Beta Nodes - a collection of experimental custom nodes for ComfyUI designed for beta testing and feedback. These nodes provide enhanced functionality for image processing, video handling, and workflow automation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["google-generativeai>=0.8.3"]

[project.urls]
Repository = "https://github.com/Starnodes2024/ComfyUI_StarBetaNodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Starnodes2024/ComfyUI_StarBetaNodes/wiki"
"Bug Tracker" = "https://github.com/Starnodes2024/ComfyUI_StarBetaNodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_StarBetaNodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

